// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > should render the Header component correctly 1`] = `
<div>
  <div>
    <button
      data-testid="connect-test-button"
    />
  </div>
  <div
    align="start"
    class="sc-beySPh itSzAW"
    position="left"
    spacing="0"
    style="width: 100vw;"
  >
    <header
      class="sc-jIYCZY jsQNCx"
    >
      <img
        class="sc-bbxCgr cuTxND"
        src="/src/assets/icons/logo-dark.svg"
      />
    </header>
    <nav
      class="sc-dxjrPO kOHJrC"
    >
      <a
        class="sc-UFult dUwtkw"
        href="/dashboard"
      >
        Dashboard
      </a>
      <a
        class="sc-UFult dUwtkw"
        href="/exchange"
      >
        Exchange
      </a>
      <a
        class="sc-UFult dUwtkw"
        href="/leaderboard"
      >
        Leaderboard
      </a>
      <a
        class="sc-UFult dUwtkw"
        href="/referrals"
      >
        referrals
      </a>
      <button
        class="sc-hLQSwg czlzAB"
        variant="secondary"
      >
        Add Chain
      </button>
      <span
        class="sc-eDLKkx eNpymk"
      >
        <button
          class="sc-hLQSwg exzUPs"
          variant="primary"
        >
          Connect
        </button>
      </span>
    </nav>
  </div>
  <div
    id="modal-root"
  />
</div>
`;

exports[`Header Component > should render the Nav component 1`] = `
<nav
  class="sc-dxjrPO kOHJrC"
>
  <a
    class="sc-UFult dUwtkw"
    href="/dashboard"
  >
    Dashboard
  </a>
  <a
    class="sc-UFult dUwtkw"
    href="/exchange"
  >
    Exchange
  </a>
  <a
    class="sc-UFult dUwtkw"
    href="/leaderboard"
  >
    Leaderboard
  </a>
  <a
    class="sc-UFult dUwtkw"
    href="/referrals"
  >
    referrals
  </a>
  <button
    class="sc-hLQSwg czlzAB"
    variant="secondary"
  >
    Add Chain
  </button>
  <span
    class="sc-eDLKkx eNpymk"
  >
    <button
      class="sc-hLQSwg exzUPs"
      variant="primary"
    >
      Connect
    </button>
  </span>
</nav>
`;
